<resources>
    <string name="app_name">Garbage Sorting</string>
    <string name="explain_text">Where to place item:</string>
    <string name="where_button">Where</string>
    <string name="what_item">What item? </string>
    <string name="where">Where?</string>
    <string name="add_button">Add new item</string>
    <string name="empty_toast">Please type something in the what and where fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modify_button">Modify items</string>
    <string name="delete_button">Delete Item</string>
    <string name="back_button">Back</string>
</resources>