<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#767272"
    android:orientation="vertical"
    android:padding="5dp">

    <!-- TextView for the heading -->
    <TextView
        android:id="@+id/explain_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/explain_text"
        android:textSize="@dimen/text_size" />

    <!-- Text field to enter item -->
    <EditText
        android:id="@+id/insert_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:inputType="text" />

    <!-- Where button -->
    <Button
        android:id="@+id/where_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="5dp"
        android:background="#39f208"
        android:text="@string/where_button" />

    <!-- Modify item button-->
    <Button
        android:id="@+id/modify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="5dp"
        android:background="#39f208"
        android:text="@string/modify_button" />
</LinearLayout>